kubernetes/base/networking/traefik/traefik.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
