kubernetes/base/networking/traefik/flux-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: flux-gateway
  namespace: flux-system
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: web
  - port: 443
    targetPort: 443
    protocol: TCP
    name: websecure
  selector:
    app.kubernetes.io/instance: traefik-traefik
    app.kubernetes.io/name: traefik
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: flux-gateway
  namespace: flux-system
spec:
  gatewayClassName: traefik
  listeners:
  - name: web
    port: 8000
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
